<resources>
    <string name="app_name">Advioo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="welcome">Welcome,</string>
    <string name="glad_to_see_you">Glad to see you!</string>
    <string name="email">Email Address</string>
    <string name="driver_phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="create_account">Create Account</string>
    <string name="to_get_started_now">to get started now!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already Have An Account?<u>Login Now</u></string>
    <string name="forgot_your_password_text">Forgot Your Password?</string>
    <string name="we_send_you_an_email">We will send you an email</string>
    <string name="logout">Logout</string>
    <string name="hello_please_login_to_continue">Hello, please login to continue!</string>
    <string name="password_again">Password Again</string>
    <string name="btn_continue">Continue</string>
    <string name="address_details">Address Details</string>
    <string name="full_name">Full Name</string>
    <string name="address_row">Address Row 1</string>
    <string name="address_row2">Address Row 2</string>
    <string name="city">City</string>
    <string name="postal_code">ZIP Code</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_model">Car Model</string>
    <string name="car_year">Car Year</string>
    <string name="car_condition">Car Condition</string>
    <string name="car_license_plate">License Plate</string>
    <string name="average_km_driven_per_month">Average KM Driven Per Month</string>
    <string name="where_do_you_work">Where do you work(City)</string>
    <string name="rideshare_driver">Are you a rideshare driver?</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="allow_us_to_contact_you">Allow us to contact you via email or phone</string>
    <string name="car_details">Car Details</string>
    <string name="search_campaign">Search Campaign</string>
    <string name="home">Home</string>
    <string name="my_campaigns">My Campaigns</string>
    <string name="account">Account</string>
    <string name="canada_country_code">CA</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="please_select_a_state">Please select your state below:</string>
    <string name="error_while_getting_cities">Error while getting cities! Please check your network connection!</string>
    <string name="register_failed">Register Failed</string>
    <string name="first_name_error">First name is required!</string>
    <string name="last_name_error">Last name is required!</string>
    <string name="email_invalid_error">A valid e-mail is required!</string>
    <string name="email_empty_error">E-Mail address is required!</string>
    <string name="phone_number_empty_error">Phone number is required!</string>
    <string name="password_empty_error">Password is required!</string>
    <string name="password_length_error">Password must be at least 8 characters long!</string>
    <string name="password_confirm_empty_error">Please confirm your password!</string>
    <string name="password_confirm_not_match">Passwords do not match!</string>
    <string name="full_name_error">Full name is required!</string>
    <string name="city_error">City is required!</string>
    <string name="address_error">At least the first address row is required!</string>
    <string name="zip_code_error">ZIP Code is required!</string>
    <string name="terms_conditions_error">You have to accept terms &amp; conditions to sign up!</string>
    <string name="car_brand_error">Car brand is required!</string>
    <string name="car_model_error">Car model is required!</string>
    <string name="car_year_error">Car year is required!</string>
    <string name="car_condition_error">Car condition is required!</string>
    <string name="license_plate_error">License plate is required!</string>
    <string name="avg_km_error">Average KM is required!</string>
    <string name="working_city_error">Working city is required!</string>
    <string name="register_success">You have successfully registered!</string>
    <string name="login_failed">Login failed, please try again!</string>
    <string name="login_success">Welcome,</string>
    <string name="error_entries_blank">Please Don\'t Leave The Entries Blank</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="email_sent">An email has been sent to you, please check your spam box.</string>
    <string name="error_blank_email">Please enter your email!</string>
    <string name="error_sent_password">Couldn\'t send a reset email</string>
    <string name="permission_needed_location">Permission needed for precise location.</string>
    <string name="give_permission">Give Permission</string>
    <string name="start_trip">Start Trip</string>
    <string name="stop_trip">STOP TRIP</string>
    <string name="resume_trip">Resume Trip</string>
    <string name="reset_trip">Reset Trip</string>
    <string name="total_km_driven">Total KM driven: </string>
    <string name="length_unit">KM</string>
    <string name="out_of_bounds_error">You are out of campaign bounds! You won\'t get paid, if you are not in bounds!</string>
    <string name="speed">Speed: </string>
    <string name="location_needed">Location Needed</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="save_trip">Save Trip</string>
    <string name="trip_save_success">Trip Saved Successfully</string>
    <string name="location_updates_channel_name">Location Tracking</string>
    <string name="location_updates_channel_description">A notification channel for showing location tracking status</string>
    <string name="location_updates_notification_title">Location Tracking</string>
    <string name="location_updates_notification_text">Tracking Location</string>
    <string name="location_updates_notification_ticker">Tracking Location</string>
    <string name="home_feed_error">Couldn\'t get items!</string>
    <string name="details">Details</string>
    <string name="light">Light</string>
    <string name="advanced">Advanced</string>
    <string name="pro">Pro</string>
    <string name="campaign_map">Campaign Map</string>
    <string name="enroll">ENROLL</string>
    <string name="currency">$</string>
    <string name="an_error_occurred_network">An error occurred! Please check your network connection!</string>
    <string name="payment">Payment: </string>
    <string name="campaign_type">Campaign Type: </string>
    <string name="multiplier">Multiplier: </string>
    <string name="is_night">Night Time: </string>
    <string name="duration">Duration:</string>
    <string name="installer_selection">Installer Selection</string>
    <string name="you_selected">You\'ve selected: </string>
    <string name="please_select_an_installer">Please select an installer and continue</string>
    <string name="see_installers_on_map">See installers on map</string>
    <string name="hyphen"> - </string>
    <string name="or_select_from_list">Or select from list</string>
    <string name="please_select_a_campaign_level">Please select a campaign level!</string>
    <string name="failed_to_load_installers">Failed to load installers!</string>
    <string name="available_installers">Available Installers</string>
    <string name="complete_enrollment">Complete Enrollment</string>
    <string name="installer_name">Installer Name</string>
    <string name="installer_address">Installer Address</string>
    <string name="get_directions_for_installer">Get directions for installer</string>
    <string name="select_this_installer">Select this installer</string>
    <string name="please_confirm_installer">Please confirm that you have selected this installer.</string>
    <string name="my_active_campaign">My Active Campaign</string>
    <string name="see_details">See Details</string>
    <string name="start_campaign">Start Trip</string>
    <string name="resume_campaign">Resume Campaign</string>
    <string name="see_campaign_stats">See Stats</string>
    <string name="have_not_enrolled_campaign">You are not enrolled into any campaigns.</string>
    <string name="enroll_now">Enroll Now!</string>
    <string name="campaign_ended">This campaign has ended</string>
    <string name="must_install_campaign">You must install the campaign first!</string>
    <string name="status">Status: </string>
    <string name="waiting_for_installment">Waiting For Installation</string>
    <string name="ready_to_start">Ready to start</string>
    <string name="in_progress">In progress</string>
    <string name="apply_campaign_success">Successfully enrolled to campaign</string>
    <string name="enrolled_successfully">Successfully Enrolled!</string>
    <string name="installer_will_contact_soon">Your installer will contact you soon.</string>
    <string name="installer_details">Installer Details</string>
    <string name="campaign_details">Campaign Details</string>
    <string name="back_to_home">Go back to home</string>
    <string name="see_campaign_details">See Campaign Details</string>
    <string name="see_installer_details">See Installer Details</string>
    <string name="edit_personal_information">Edit Personal Information</string>
    <string name="edit_car_driving_info">Edit Car &amp; Driving Info</string>
    <string name="edit_address_information">Edit Address Information</string>
    <string name="campaign_history">Campaign History</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="error_while_updating_user_details">Error while updating your data!</string>
    <string name="update_successful">Profile updated successfully!</string>
    <string name="current_trip">CURRENT TRIP</string>
    <string name="km">KM</string>
    <string name="end_trip">END TRIP</string>
    <string name="please_allow_all_permissions">Permissions denied! Please go to settings and allow:</string>
    <string name="the_following_permissions_denied">The following permissions has been denied, please allow them from settings: </string>
    <string name="notifications">Notifications</string>
    <string name="precise_location">Precise Location</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">Total</string>
    <string name="currency_symbol">$</string>
    <string name="contact_us">Contact Us</string>
    <string name="title">Title</string>
    <string name="your_message">Your Message</string>
    <string name="you_can_contact_us">If you have any problems, requests, or suggestions, you can contact us. We will respond to the email you used <b>during registration</b>.</string>
    <string name="submit">Submit</string>
    <string name="your_message_has_been_successfully_sent">Your message has been successfully sent, our team will contact you. Please check your email for a response.</string>
    <string name="response_will_sent_to_this_email">The response will be sent to this email:</string>
    <string name="you_can_turn_off_or_background">Tip : You can minimize the app or turn off your phone\'s screen; it will keep tracking unless you end it in background services or end the trip.</string>
    <string name="receive_payment">Receive Payment</string>
</resources>