<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.LoginFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login"
            android:layout_gravity="center"
            android:layout_marginTop="80dp">
        </ImageView>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_please_login_to_continue"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/email"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/email_icon"
            >

            <EditText
                android:id="@+id/tf_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/password_icon"
            >

            <EditText
                android:id="@+id/tf_password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/app_button_bg_color"
            android:layout_gravity="end"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="14dp">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background_blue"
            >
        </androidx.appcompat.widget.AppCompatButton>

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/dont_have_an_account">
            </TextView>
            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_marginStart="5dp"
                android:textColor="@color/app_button_bg_color">
            </TextView>
        </LinearLayout>



    </LinearLayout>







</FrameLayout>