<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.RegisterAddressDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_details"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_gravity="center">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/full_name"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/user_icon"
            >

            <EditText
                android:id="@+id/tf_full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/city"
            style="@style/TfCustomLayout"
            app:endIconDrawable="@drawable/baseline_arrow_forward_ios_24"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/city_location_icon"
            >

            <EditText
                android:editable="false"
                android:id="@+id/tf_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/address_row"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/location_icon"
            >
            <EditText
                android:id="@+id/tf_address_row1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/address_row2"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/location_icon"
            >

            <EditText
                android:id="@+id/tf_address_row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/postal_code"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/postal_code_icon"
            >
            <EditText
                android:id="@+id/tf_postal_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue_address_details"
            android:layout_width="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:text="@string/btn_continue"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background_blue"
            >
        </androidx.appcompat.widget.AppCompatButton>



    </LinearLayout>

</FrameLayout>