<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.RegisterUserWorkDetailsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<FrameLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_button_icon">
            </ImageView>
            <TextView
                android:layout_marginStart="110dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_details"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_gravity="center">
            </TextView>


        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/car_brand"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/car_details_icon"
            >
            <EditText
                android:id="@+id/tf_car_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/car_model"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/car_details_icon"
            >
            <EditText
                android:id="@+id/tf_car_model"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/car_year"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/car_details_icon"
            >
            <EditText
                android:id="@+id/tf_car_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_product_price"
            style="@style/CustomDropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:startIconDrawable="@drawable/car_status_icon"
            >

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/car_condition">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/car_license_plate"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/license_plate"
            >
            <EditText
                android:id="@+id/tf_license_plate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/average_km_driven_per_month"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/speedometer"
            >
            <EditText
                android:id="@+id/tf_avg_km_driven_per_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/where_do_you_work"
            style="@style/TfCustomLayout"
            app:startIconDrawable="@drawable/working_location_icon"
            >
            <EditText
                android:id="@+id/tf_work_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rideshare_driver"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:gravity="center"/>

            <CheckBox
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/terms_conditions"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:gravity="center"/>

            <CheckBox
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/allow_us_to_contact_you"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:gravity="center"/>

            <CheckBox
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background_blue"
            >
        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>


</FrameLayout>

</ScrollView>