<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.StartingFragment"
    android:background="@drawable/app_gradient_color_purple"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        android:gravity="center"
        >
        
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_directions_car_24"
            >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center">
        </TextView>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_go_to_login_from_start"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/button_background_white"
            >
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_go_to_register_from_start"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:background="@drawable/transparent_button"
            android:text="@string/signup"
            android:textColor="@color/white"
            >
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Advioo BETA TEST V0.001"
        android:textColor="@color/black"
        android:layout_margin="5dp">

    </TextView>






</FrameLayout>